Fixed issues with question field and add question button alignment

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,5 @@
     transform: rotate(360deg);
   }
 }
+
+body {background-color: #7ca7b8;}
